tests/functional/lang/eval-fail-concatMap-3.err.exp
error:
       … while calling the 'concatMap' builtin
         at /pwd/lang/eval-fail-concatMap-3.nix:1:1:
            1| builtins.concatMap (x: 1) [ "foo" ]
             | ^
            2|

       … while evaluating the return value of the function passed to builtins.concatMap
         at /pwd/lang/eval-fail-concatMap-3.nix:1:21:
            1| builtins.concatMap (x: 1) [ "foo" ]
             |                     ^
            2|

       error: expected a list but found an integer: 1
